--- a/views/contact-me.html
+++ b/views/contact-me.html
@@ -71,65 +71,69 @@
         <!-- Content -->
         <section class="home d-flex justify-content-center align-items-center" data-aos="fade-down" data-aos-duration="500">
             <div class="container-fluid home-upper">
-              <div class="d-flex flex-column justify-content-center align-items-center">
-                  <!-- Title -->
-                  <div class="text-center">
-                      <h1>GET IN TOUCH</h1>
-                  </div>                
-                  <!-- End Title -->
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <!-- Title -->
+                    <div class="text-center">
+                        <h1>GET IN TOUCH</h1>
+                    </div>                
+                    <!-- End Title -->
 
-                  <!-- Form -->
-                  <div class="col-12 col-md-8 col-lg-5 mt-4">
-                      <form>
-                        <!-- Name -->
-                        <div class="form-group mb-4">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control shadow" name="name" id="name">
-                        </div>
+                    <!-- Alert -->
+                    <div class="" id="alert" role="alert"></div>               
+                    <!-- End Alert -->
 
-                        <!-- Email -->
-                        <div class="form-group mb-4">
-                          <label for="email">Email</label>
-                          <input type="email" name="email" id="email" class="form-control shadow">
-                        </div>
-
-                        <!-- Phone -->
-                        <div class="form-group mb-4">
-                          <label for="phone">Phone Number</label>
-                          <input type="tel" name="phone" id="phone" class="form-control shadow">
-                        </div>
-
-                        <!-- Subject -->
-                        <div class="form-group mb-4">
-                          <label>Subject</label>
-                          <div class="input-group shadow">                       
-                            <select class="form-select" name="subject" id="subject">
-                                <option selected></option>
-                                <option value="Hiring Matters">I want to hire you</option>
-                                <option value="Discussion">I want to discuss something</option>
-                                <option value="Collaboration">Let's do a collaboration</option>
-                                <option value="Let's Talk">Let's be friends</option>
-                            </select>
-                          </div>
-                        </div>
-
-                        <!-- Comments -->
-                        <div class="form-group mb-4">
-                            <label for="description">Your Message</label>
-                            <textarea id="comments" name="comments" class="form-control shadow"></textarea>
-                        </div>
-
-                        <!-- Submit Button -->
-                        <div class="form-group mt-5 d-flex justify-content-end align-items-center">
-                            <div class="button-group col-3 text-center">
-                                <button type="button" name="add" id="add" class="btn btn-outline-light btn-sm contact w-100">Submit</button>
+                    <!-- Form -->
+                    <div class="col-12 col-md-8 col-lg-5 mt-4">
+                        <form id="form">
+                            <!-- Name -->
+                            <div class="form-group mb-4">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control shadow" name="name" id="name">
                             </div>
-                        </div>
-                        <!-- End Submiy Button -->
-                      </form>
-                  </div>
-                  <!-- End Form -->
-              </div>
+
+                            <!-- Email -->
+                            <div class="form-group mb-4">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" class="form-control shadow">
+                            </div>
+
+                            <!-- Phone -->
+                            <div class="form-group mb-4">
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" name="phone" id="phone" class="form-control shadow">
+                            </div>
+
+                            <!-- Subject -->
+                            <div class="form-group mb-4">
+                            <label>Subject</label>
+                            <div class="input-group shadow">                       
+                                <select class="form-select" name="subject" id="subject">
+                                    <option selected></option>
+                                    <option value="Hiring Matters">I want to hire you</option>
+                                    <option value="Discussion">I want to discuss something</option>
+                                    <option value="Collaboration">Let's do a collaboration</option>
+                                    <option value="Let's Talk">Let's be friends</option>
+                                </select>
+                            </div>
+                            </div>
+
+                            <!-- Comments -->
+                            <div class="form-group mb-4">
+                                <label for="description">Your Message</label>
+                                <textarea id="comments" name="comments" class="form-control shadow"></textarea>
+                            </div>
+
+                            <!-- Submit Button -->
+                            <div class="form-group mt-5 d-flex justify-content-end align-items-center">
+                                <div class="button-group col-3 text-center">
+                                    <button type="button" onclick="getData ()" name="add" id="add" class="btn btn-outline-light btn-sm contact w-100">Submit</button>
+                                </div>
+                            </div>
+                            <!-- End Submiy Button -->
+                        </form>
+                    </div>
+                    <!-- End Form -->
+                </div>
             </div>
         </section>
         <!-- End Content -->
