--- a/views/index.html
+++ b/views/index.html
@@ -149,7 +149,7 @@
         <!-- End Upper Content -->
 
         <!-- Lower Content -->
-        <section class="d-flex justify-content-center align-items-center">
+        <section class="d-flex justify-content-center align-items-center" style="background-color: #ffffff;">
             <div class="container-fluid home-lower">
                 <div class="column">
                     <!-- Lower Content Title -->
