--- a/views/project-blog.html
+++ b/views/project-blog.html
@@ -79,10 +79,10 @@
                     <!-- End Title -->
 
                     <!-- Upper Content -->
-                    <div class="project-blog-upper container mt-4">
+                    <div class="container mt-4">
                         <div class="row h-100">
                             <!-- Left Side -->
-                            <div class="h-100 py-4 col-12 col-lg-8 order-1 d-flex flex-column justify-content-center">
+                            <div class="h-100 py-4 pe-lg-5 col-12 col-lg-8 order-1 d-flex flex-column justify-content-center">
                                 <!-- Project Image -->
                                 <div class="project-blog-image bg-dark px-0 py-0 mx-0 mt-0 d-flex flex-column justify-content-center">
                                     <img class="pb-image" src="/public/img/card01.jpg" alt="Blog Image" style="width:100%;">
@@ -92,30 +92,22 @@
                             <!-- End Left Side -->
     
                             <!-- Right Side -->
-                            <div class="h-100 ps-lg-5 col-12 col-lg-4 order-2 d-flex flex-column">
+                            <div class="h-100 col-12 col-lg-4 order-2 d-flex flex-column">
                                 <div class="blog-right-side mt-4">
                                     <div class="d-flex flex-column">
                                         <div class="duration mb-3">
                                             <h4>Duration</h4>
-                                            <p class="d-flex align-items-center"><i class="fas fa-calendar-alt me-3"></i>{{.Project.Sdate}} - {{.Project.Edate}}</p>
+                                            <p class="d-flex align-items-center"><i class="fas fa-calendar-alt me-3"></i>{{.Project.SdateDetail}} - {{.Project.EdateDetail}}</p>
                                             <p class="d-flex align-items-center"><i class="fas fa-clock me-3"></i>{{.Project.Duration}}</p>
                                         </div>
 
                                         <div class="technology">
                                             <h4>Technology</h4>
-                                            <div class="grid-container">
-                                                <!-- <div class="col-6"> -->
-                                                    <p class="d-flex align-items-center"><i class="fab fa-php me-3"></i>PHP</p>
-                                                <!-- </div> -->
-                                                <!-- <div class="col-6"> -->
-                                                    <p class="d-flex align-items-center"><i class="fab fa-js-square me-3"></i>Javascript</p>
-                                                <!-- </div> -->
-                                                <!-- <div class="col-6"> -->
-                                                    <p class="d-flex align-items-center"><i class="fab fa-python me-3"></i>Python</p>
-                                                <!-- </div> -->
-                                                <!-- <div class="col-6"> -->
-                                                    <p class="d-flex align-items-center"><i class="fab fa-html5 me-3"></i>HTML</p>
-                                                <!-- </div>                                                                                              -->
+                                            <div class="d-flex flex-row flex-wrap" style="row-gap: 5px;">
+                                                <p class="{{.Project.Icon1PClass}}"><i class="{{.Project.Icon1}}"></i>{{.Project.Icon1P}}</p>
+                                                <p class="{{.Project.Icon2PClass}}"><i class="{{.Project.Icon2}}"></i>{{.Project.Icon2P}}</p>
+                                                <p class="{{.Project.Icon3PClass}}"><i class="{{.Project.Icon3}}"></i>{{.Project.Icon3P}}</p>
+                                                <p class="{{.Project.Icon4PClass}}"><i class="{{.Project.Icon4}}"></i>{{.Project.Icon4P}}</p>
                                             </div>
                                         </div>
                                     </div>
