--- a/views/project.html
+++ b/views/project.html
@@ -111,23 +111,23 @@
                                 <label for="checkbox">Technologies</label>
                                 <div class="checkbox mt-3 d-flex flex-row" id="checkbox" name="checkbox">
                                     <div class="form-check col-4">
-                                        <input type="checkbox" class="form-check-input" name="c1" id="c1">
+                                        <input type="checkbox" class="form-check-input" name="c1" id="c1" value="c1">
                                         <label class="form-check-label" for="c1">PHP</label>
                                     </div>
 
                                     <div class="form-check col-4">
-                                        <input type="checkbox" class="form-check-input" name="c2" id="c2">
+                                        <input type="checkbox" class="form-check-input" name="c2" id="c2" value="c2">
                                         <label class="form-check-label" for="c2">Javascript</label>
                                     </div>
                                 </div>
                                 <div class="checkbox mt-3 d-flex flex-row" id="checkbox" name="checkbox">
                                     <div class="form-check col-4">
-                                        <input type="checkbox" class="form-check-input" name="c3" id="c3">
+                                        <input type="checkbox" class="form-check-input" name="c3" id="c3" value="c3">
                                         <label class="form-check-label" for="c3">Python</label>
                                     </div>
 
                                     <div class="form-check col-4">
-                                        <input type="checkbox" class="form-check-input" name="c4" id="c4">
+                                        <input type="checkbox" class="form-check-input" name="c4" id="c4" value="c4">
                                         <label class="form-check-label" for="c4">HTML</label>
                                     </div>
                                 </div>
